# ai-stack-starter

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/v1/: __init__.py  auth.py  chat.py  documents.py  health.py
apps/backend/app/auth/: __init__.py  base.py  clerk.py  dependencies.py  factory.py  jwt.py
apps/backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
apps/backend/app/middleware/: __init__.py  auth.py  error_handler.py  logging.py
apps/backend/app/models/: __init__.py  user.py
apps/backend/app/rag/: __init__.py  document_processor.py  pipeline.py
apps/cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/cli/scripts/: prepare-template.js
apps/cli/src/: index.ts  types.ts
apps/cli/src/utils/: analytics.ts  telemetry.ts
apps/cli/template/: README.md  docker-compose.yml
apps/cli/template/nextjs-fullstack/: .env.example  .gitignore  middleware.ts  package.json  tailwind.config.ts
apps/cli/template/nextjs-fullstack/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/cli/template/nextjs-fullstack/components/: providers.tsx
apps/cli/template/nextjs-fullstack/lib/: env.ts  utils.ts
apps/cli/template/nextjs-fullstack/types/: index.ts
apps/frontend/: .env.example  next.config.mjs  package.json
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/chat/: page.tsx
apps/frontend/src/app/documents/: page.tsx
apps/frontend/src/utils/: api.ts
apps/web/: astro.config.mts  package-lock.json  package.json  tailwind.config.mts
apps/web/.astro/: content-modules.mjs  data-store.json  settings.json
apps/web/.astro/collections/: docs.schema.json
apps/web/src/components/: Features.tsx  Hero.tsx  ShowcasePage.tsx  StackBuilder.tsx  StatsSection.tsx  TechStackSection.tsx
apps/web/src/components/analytics/: AnalyticsHeader.tsx  AnalyticsPage.tsx  MetricsCards.tsx  StackCharts.tsx  TimelineCharts.tsx  types.ts
apps/web/src/components/builder/: category-section.tsx  code-viewer.tsx  file-explorer.tsx  preview-panel.tsx  sidebar-summary.tsx  stack-builder.tsx  tech-card.tsx
apps/web/src/content/: config.ts
apps/web/src/layouts/: DocsLayout.astro  Layout.astro
apps/web/src/lib/: generator.ts  search-data.ts  search.ts  stack-constants.ts  stack-constants.tsx  stack-state.ts  stack-utils.ts  toc.ts  virtual-fs.ts
apps/web/src/pages/: analytics.astro  builder.astro  index.astro  showcase.astro
cli/: package.json
cli/src/: index.ts
docs/: ARCHITECTURE.md  STRUCTURE.md  ai-stack-fastapi-quick.md  ai-stack-fastapi-spec.md  ai-stack-nextjs-quick.md  ai-stack-nextjs-spec.md  ai-stack-typescript-quick.md  ai-stack-typescript-spec.md  nextjs-ai-starter.md
scripts/: create-template.js
website/: astro.config.mjs  astro.config.mts  package-lock.json  package.json  tailwind.config.mjs
website/.astro/: data-store.json
website/public/: robots.txt
website/src/app/: page.tsx
website/src/components/: CLIPreview.tsx  Community.tsx  Features.tsx  Hero.tsx  StackBuilder.tsx  TypesafeSection.tsx
website/src/components/docs/: Card.astro  Step.astro  Steps.astro  TabPanel.astro  TableOfContents.astro  Tabs.astro
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/: builder.astro  index.astro  showcase.astro
website/src/pages/docs/: architecture.astro  deployment.astro  index.astro  installation.astro  kubernetes.astro  llm-providers.astro  quickstart.astro  rag-pipeline.astro  use-cases.astro  vector-databases.astro
website/src/styles/: global.css
(+65 files in other folders)
